---------------------------------------------------------------------------------------------------
Version: 0.2.14
Date: ????
  Bugfixes:
    - Actually support fluid filters on fluid mining drills. Fixed bad commit.
    - Do not crash on ghost loaders
---------------------------------------------------------------------------------------------------
Version: 0.2.13
Date: 2025-03-31
  Changes:
    - Support ghost entities
    - Support fluid filters on fluid mining drills
  Bugfixes:
    - Do not crash on proxy-containers
---------------------------------------------------------------------------------------------------
Version: 0.2.12
Date: 2025-01-11
  Bugfixes:
    - Fixed crashes relating to entity ghosts
---------------------------------------------------------------------------------------------------
Version: 0.2.11
Date: 2024-12-31
  Changes:
    - Support output filter of spoiled fuel
---------------------------------------------------------------------------------------------------
Version: 0.2.10
Date: 2024-12-28
  Bugfixes:
    - Fixed crash when opening infinity chest with multiple filter slots
---------------------------------------------------------------------------------------------------
Version: 0.2.9
Date: 2024-11-17
  Bugfixes:
    - Added missing "valid" check on gui click
  Changes:
    - Added tooltip for pipette
---------------------------------------------------------------------------------------------------
Version: 0.2.8
Date: 2024-11-06
  Bugfixes:
    - Fix crash on filtered mining drills with fluids
---------------------------------------------------------------------------------------------------
Version: 0.2.7
Date: 2024-11-02
  Bugfixes:
    - Fixed invalid updaters/entities
---------------------------------------------------------------------------------------------------
Version: 0.2.6
Date: 2024-11-02
  Changes:
    - Support for filtered miners
    - Support for quality upgraded products
  Bugfixes: